--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,6 @@ body {
   min-height: 100%;
 }
 
-#root,
-.App,
-.App>div {
-  height: 100vh;
-}
-
 .apexcharts-canvas {
   position: absolute;
   margin: 0 auto;
@@ -19,4 +13,10 @@ body {
 
 #main {
   text-align: center;
+  width: 100%;
+  height: 100%;
+}
+
+input[type='radio'] {
+  visibility: hidden;
 }
