--- a/src/App.css
+++ b/src/App.css
@@ -57,3 +57,9 @@ small {
   font-weight: 200 !important;
   font-size: 0.5rem !important;
 }
+
+.loading {
+  color: #fff;
+  text-align: center;
+  margin-top: 100px;
+}
