--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@=100;200;400;900&display=swap');
-
 html {
   height: 100%;
   background-color: #2c3e50 !important;
@@ -8,12 +6,19 @@ html {
 body {
   min-height: 100%;
   background-color: #2c3e50 !important;
-  font-family: Lato, serif;
 }
 
 .apexcharts-canvas {
   position: absolute;
   margin: 0 auto;
+}
+
+.apexcharts-tooltip {
+  color: #000;
+}
+
+.apexcharts-menu {
+  color: #000;
 }
 
 #main {
@@ -35,6 +40,7 @@ input[type='radio'] {
 .title {
   padding-bottom: 30px;
   font-size: 2rem;
+  font-weight: 900;
 }
 
 .App {
@@ -48,13 +54,12 @@ button {
 
 p,
 small {
-  font-weight: 200;
+  font-weight: 300;
   font-size: 0.9rem
 }
 
 #text-input {
-  font-family: Lato, serif !important;
-  font-weight: 200 !important;
+  font-weight: 300 !important;
   font-size: 0.5rem !important;
 }
 
@@ -62,4 +67,8 @@ small {
   color: #fff;
   text-align: center;
   margin-top: 100px;
+}
+
+.top-ten {
+  color: #fff;
 }
